# Argus

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  enums.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  documents.py  health.py
backend/app/citation/: __init__.py  embeddings.py  types.py
backend/app/citation/extraction/: __init__.py  extractor.py  reporters.py
backend/app/citation/sources/: __init__.py  base.py
backend/app/citation/verification/: __init__.py  checks.py  (+1 more)
backend/app/core/: config.py  db.py  errors.py  logging.py
backend/app/models/: __init__.py  citation.py  document.py  enums.py  job.py  mixins.py  reference.py  validation.py
backend/app/reports/: __init__.py  builders.py  model.py
backend/app/repositories/: __init__.py  base.py  citation.py  document.py  job.py  reference.py  validation.py
backend/app/schemas/: __init__.py  base.py  citation.py  dashboard.py  document.py  validation.py
backend/app/services/: __init__.py  dashboard_service.py  document_service.py  processing_service.py  report_service.py  source_provider.py  storage.py  text_extraction.py
backend/app/workers/: worker.py
backend/scripts/: wait_for_db.py
backend/seed/: corpus.py  seed.py
backend/seed/samples/: demo_brief.txt
backend/tests/: conftest.py
backend/tests/integration/: test_flow.py
backend/tests/unit/: test_extraction.py  test_reports.py  test_verification.py
(+30 files in other folders)
