[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citecheck-backend"
version = "1.0.0"
description = "CiteCheck — legal citation validator backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pgvector>=0.3.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "reportlab>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
include = ["app*", "seed*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: pure domain/unit tests (no DB)",
    "integration: tests requiring a Postgres database",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 90
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = []
